fixed nav position and added overlay for visibility

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,47 +1,21 @@
-
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Pacifico');
 @import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Poiret+One|Shadows+Into+Light');
 
-html {
-    height: 100%;
+a {
+  color: #00B7FF;
 }
-
-
-h1 {
-    font-family: 'Pacifico', cursive;
-    font-weight: 400;
-    font-size: 100px;
-    text-align: center;
-    color: #C51350;
-}
-
-h2 {
-    font-family: 'Shadows Into Light', cursive;
-    font-size: 30px;
-    color:#ECECEB;
-
-}
-
 
 body {
-    font-size: 150%;
-    background: linear-gradient(rgba(244,209,74,0.3), rgba(250,147,44,0.1)), url('https://source.unsplash.com/NhU0nUR7920/1600x900');
-    background-position: center;
-    background-size: cover;
+  background-color: #FCEEE3 !important;
+  color: #666666;
+  font-size: 14px;
+  font-family: 'Open Sans';
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-
-
-.container {
-    padding: 50px 0;
-    text-align: center;
-    color: white;
+.jumbotron{
+  background:rgba(255,255,255,0.5) !important;
 }
-
-.container2 {
-    padding: 25px 0;
-
-}
-
 
 input {
   display: block;
@@ -159,3 +133,56 @@ label {
   font-size: 10px;
   font-weight: 400;
 }
+
+.h1strong{
+  font-weight:800;
+  font-size:30px;
+}
+
+
+.index-body
+{
+  background-color: #ffb54c;
+//background-image: -webkit-linear-gradient(30deg, #FFA48E 50%, #D6C2E8 50%);
+  background-image: url(https://source.unsplash.com/NhU0nUR7920/1600x900);
+  background-size:auto 100%;
+  background-size:cover;
+  min-height:100vh;
+
+
+}
+.index-body:before{
+  content:'';
+  background-color:black;
+  opacity:0.6;
+  position:absolute;
+  top:0;
+  right:0;
+  left:0;
+  bottom:0;
+  z-index:-2;
+
+}
+
+.indexH1 {
+  font-family: 'Pacifico', cursive;
+  font-weight: 400;
+  font-size: 100px;
+  text-align: center;
+  color: #C51350;
+}
+.indexH2 {
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 30px;
+  color:#ECECEB;
+
+}
+
+.text-center{
+
+  padding: 50px 0;
+  text-align: center;
+  color: white;
+
+}
+
